--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ionic-angular-viewer-pdf",
+  "name": "ionic_test",
   "version": "0.0.1",
   "author": "Ionic Framework",
   "homepage": "https://ionicframework.com/",
@@ -20,15 +20,14 @@
     "@angular/platform-browser-dynamic": "~8.1.2",
     "@angular/router": "~8.1.2",
     "@ionic-native/core": "^5.0.0",
-    "@ionic-native/document-viewer": "^5.17.0",
-    "@ionic-native/file": "^5.17.0",
-    "@ionic-native/file-opener": "^5.17.0",
-    "@ionic-native/file-transfer": "^5.17.0",
+    "@ionic-native/document-viewer": "^5.17.1",
+    "@ionic-native/file": "^5.17.1",
+    "@ionic-native/file-opener": "^5.17.1",
+    "@ionic-native/file-transfer": "^5.17.1",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.7.1",
-    "cordova-android": "^8.1.0",
-    "cordova-ios": "^5.1.0",
+    "cordova-android": "8.1.0",
     "cordova-plugin-document-viewer": "^0.9.13",
     "cordova-plugin-file": "^6.0.2",
     "cordova-plugin-file-opener2": "^2.2.1",
@@ -74,10 +73,6 @@
   "description": "An Ionic project",
   "cordova": {
     "plugins": {
-      "cordova-plugin-file": {},
-      "cordova-plugin-file-opener2": {},
-      "cordova-plugin-file-transfer": {},
-      "cordova-plugin-document-viewer": {},
       "cordova-plugin-whitelist": {},
       "cordova-plugin-statusbar": {},
       "cordova-plugin-device": {},
@@ -85,11 +80,16 @@
       "cordova-plugin-ionic-webview": {
         "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
       },
-      "cordova-plugin-ionic-keyboard": {}
+      "cordova-plugin-ionic-keyboard": {},
+      "cordova-plugin-file": {},
+      "cordova-plugin-file-opener2": {
+        "ANDROID_SUPPORT_V4_VERSION": "27.+"
+      },
+      "cordova-plugin-file-transfer": {},
+      "cordova-plugin-document-viewer": {}
     },
     "platforms": [
-      "android",
-      "ios"
+      "android"
     ]
   }
 }
